--- a/packages/snaps-controllers/src/services/iframe/test/index.html
+++ b/packages/snaps-controllers/src/services/iframe/test/index.html
@@ -11,16 +11,20 @@
     <script>
       (function () {
         try {
+          // Parent is the iframe created by Vitest containing the Snap iframe
+          // and this page as a sibling iframe. We try to access the Snap iframe
+          // from the parent iframe.
           const snap = parent.document.querySelector('iframe[data-testid="snaps-iframe"]');
           if (!snap) {
-            window.parent.postMessage('Failed to find snap iframe.', '*');
+            window.parent.postMessage('Failed to find Snap iframe.', '*');
             return;
           }
 
           // We try to access the snap iframe document. If this works, it means
           // that the iframe is not sandboxed. Otherwise it will throw an error.
-          if (snap.document === null || snap.document === undefined) {
+          if (snap.contentDocument === null) {
             window.parent.postMessage('Failed to access document of the snap iframe.', '*');
+            return;
           }
         } catch (e) {
           window.parent.postMessage(
@@ -28,6 +32,9 @@
             '*',
           );
         }
+
+        // Fall through case, which should not happen.
+        window.parent.postMessage('Unexpected success.', '*');
       })();
     </script>
   </body>
