--- a/packages/snaps-controllers/src/services/iframe/test/index.html
+++ b/packages/snaps-controllers/src/services/iframe/test/index.html
@@ -14,7 +14,9 @@
           // Parent is the iframe created by Vitest containing the Snap iframe
           // and this page as a sibling iframe. We try to access the Snap iframe
           // from the parent iframe.
-          const snap = parent.document.querySelector('iframe[data-testid="snaps-iframe"]');
+          const snap = parent.document.querySelector(
+            'iframe[data-testid="snaps-iframe"]',
+          );
           if (!snap) {
             window.parent.postMessage('Failed to find Snap iframe.', '*');
             return;
@@ -23,7 +25,10 @@
           // We try to access the snap iframe document. If this works, it means
           // that the iframe is not sandboxed. Otherwise it will throw an error.
           if (snap.contentDocument === null) {
-            window.parent.postMessage('Failed to access document of the snap iframe.', '*');
+            window.parent.postMessage(
+              'Failed to access document of the snap iframe.',
+              '*',
+            );
             return;
           }
         } catch (e) {
